# form-worker-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env.example  lambda_handler.py  pyproject.toml
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  exceptions.py  lambda_handler.py
app/models/: __init__.py  events.py
app/services/: __init__.py  cognito_auth_service.py  employee_service.py  form_service_client.py
app/workers/: __init__.py  dispatch_completed_processor.py  dispatch_processor.py  user_candidate_assigned_processor.py
scripts/: deploy-terraform-cloud.sh
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda_worker/: README.md  main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py
tests/unit/: test_dispatch_processor.py
