[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "henko-form-worker-service"
version = "1.0.0"
description = "Asynchronous worker service for processing form dispatch events via SQS"
authors = [
    {name = "Henko Team", email = "dev@henko.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["form", "worker", "aws", "lambda", "sqs", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11,<3.14"

# Core dependencies (minimal set for Lambda worker)
dependencies = [
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.1.0",
    "boto3>=1.40.0",
    "botocore>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/henko/form-worker-service"
Repository = "https://github.com/henko/form-worker-service"
Documentation = "https://henko.github.io/form-worker-service"

[project.optional-dependencies]
# AWS dependencies (for local development)
aws = [
    "boto3>=1.40.0",
    "aioboto3>=13.0.0",
]

# Testing dependencies (not used - project has no tests)
# test = [
#     "pytest>=8.4.0",
#     "pytest-asyncio>=0.24.0",
#     "pytest-cov>=5.0.0",
#     "pytest-mock>=3.14.0",
#     "httpx>=0.27.0",
#     "responses>=0.25.0",
# ]

# Development tools
dev = [
    "pre-commit>=4.3.0",
]

# Local development (includes AWS for local testing)
local = [
    "boto3>=1.40.0",
    "aioboto3>=13.0.0",
    "python-dotenv>=1.1.0",
]

# All development dependencies
all = [
    "boto3>=1.40.0",
    "aioboto3>=13.0.0",
    "pre-commit>=4.3.0",
    # Code quality tools
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "bandit>=1.8.0",
    "safety>=2.3.0",
    "checkov>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]
known_third_party = ["boto3", "pydantic", "requests", "urllib3"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".pytest_cache",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "aioboto3.*",
]
ignore_missing_imports = true

# Testing configuration removed - project has no tests
# [tool.pytest.ini_options]
# [tool.coverage.run]
# [tool.coverage.report]
# [tool.coverage.html]
# [tool.coverage.xml]
